tdf#103178 Final SID can differ from the original one

e.g. if the same one is passed twice to deactivate the
current function. So the assumption of commit
11d605cc5a0c221d2423b6e63f502db660d085d2 that if
we don't use enum slots then we always use the original
one is wrong.

Change-Id: Ib22fa88c958e5af85333cb8fa287f65f92b30e08